--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.0-rc2'
+    compileSdkVersion 'android-O'
+
     defaultConfig {
         applicationId "com.ivianuu.commons.sample"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 'O'
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,11 +21,21 @@ android {
 }
 
 dependencies {
+    // Commons
+    compile project(':library')
+
+    // Android Support
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    // Compile Libs
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    // Android Test
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    // Test
     testCompile 'junit:junit:4.12'
 }
