--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile project(':library')
 
     // Android Support
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.0.0-beta1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Compile Libs
