--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    buildToolsVersion '26.0.0-rc2'
-    compileSdkVersion 'android-O'
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "com.ivianuu.commons.sample"
         minSdkVersion 19
-        targetSdkVersion 'O'
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -25,7 +25,7 @@ dependencies {
     compile project(':library')
 
     // Android Support
-    compile 'com.android.support:appcompat-v7:26.0.0-beta1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Compile Libs
