--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -5,39 +5,19 @@ group='com.github.ivianuu'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.1"
 
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
     }
 }
 
 dependencies {
     // Android Support
-    compile 'com.android.support:appcompat-v7:26.0.0-beta2'
-
-    // Compile Libs
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-    // Android Test
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-
-    // Test
-    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:26.0.2'
 }
 
 // build a jar with source files
