--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -1,7 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-
-group='com.github.ivianuu'
 
 android {
     compileSdkVersion 26
@@ -13,11 +10,16 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     // Android Support
-    compile 'com.android.support:appcompat-v7:26.0.2'
+    api 'com.android.support:appcompat-v7:26.0.2'
 }
 
 // build a jar with source files
