--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -11,12 +11,17 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     // Commons
-    compile project(':commons')
+    implementation project(':commons')
 
     // Android Support
-    compile 'com.android.support:appcompat-v7:26.0.2'
+    implementation 'com.android.support:appcompat-v7:26.0.2'
 }
